Changelog for SusyACSkimAnalysis
================================

v91

* Bug fixes:
 - Memory leak fixed (in electron isolation)
 - wrong array bounds in tau genjet variables have been fixed, this resulted
   in memory corruption in few cases
 - fixed bug in how true pileup was filled. Added protection agains array
   bounds overflow
 - Wrong array bounds in some supercluster variables lead in rare cases to
   memory corruption.

* Updates
 - All variables concerning trigger matching have been removed, since this
   consumed a lot of disk space. Once has to do the trigger matching now
   offline. This results in less file size.
 - In order to save 40% of CPU time, trigger filters are now no longer associated
   to the trigger path. However, all trigger path and all trigger filters with
   objects are stored; so one has to know the connection between trigger
   filters and trigger path
 - Trigger path names are now stored as vector<string>. This resolves the
   problem where array bounds were too small for some trigger names, e.g. 2012
   DoubleMu trigger were cut.
 - Generated Photons are only stored if they exceed 10 GeV (previously 1
   GeV). This reduces the file size.
 - Calo jets, fat jets and PF muons have been removed from the code. This
   reduces file size.
 - PF electrons can now be switched on or off.
 - Iso deposit variables (Trk, ECAL, HCAL) have been removed from the muons
 - Taus with pT < 15 GeV are not saved any more
 - PF jets with pT < 10 GeV are not saved any more
 - Tau ID was updated
 - Photon ID was updated
 - Trigger objects are now stored as TLorentzVector
 - generated tau decay mode now saved as integer instead of string